# -Repository-name

./: .env.example  .gitignore  .importlinter  .prettierignore  01-PRODUCT-VISION.md  02-SRS.md  03-SYSTEM-ARCHITECTURE.md  04-DOMAIN-MODEL.md  05-DATA-MODEL.md  06-ROADMAP.md  07-APPLICATION-ARCHITECTURE.md  08-API-DESIGN.md  09-TECHNOLOGY-ARCHITECTURE.md  10-IMPLEMENTATION-GUIDE.md  11-DEPLOYMENT-OPERATIONS.md  12-SECURITY-PRIVACY.md  13-AI-ARCHITECTURE.md  14-TESTING-STRATEGY.md  15-ARCHITECTURE-DECISION-RECORDS.md  16-GLOSSARY-AND-APPENDIX.md  17-PROJECT-INITIALIZATION-PLAN.md  README.md  dependency-cruiser.config.cjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/ai_bazi_api/: __init__.py  main.py
apps/api/tests/: test_health.py
apps/web/: eslint.config.mjs  next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/app/: layout.tsx  page.tsx  styles.css
apps/web/tests/: home.test.tsx
apps/worker/: pyproject.toml
apps/worker/src/ai_bazi_worker/: __init__.py  main.py
apps/worker/tests/: test_lifecycle.py
docs/: M1-PLATFORM-FOUNDATION.md  M2-DOMAIN-FOUNDATION.md  M2-REQUIREMENTS-TRACEABILITY.md  M3-CALENDAR-TIME-ENGINE.md  M4-FOUR-PILLARS-FOUNDATION.md  README.md
docs/adr/: ADR-CAND-M3-001-CALENDAR-PROVIDER-BINDING.md  ADR-CAND-M4-001-FOUR-PILLARS-RULE-BINDING.md  M2-DOMAIN-DECISIONS.md
infrastructure/: README.md
scripts/: README.md  secret-scan.sh  verify.sh
tests/architecture/: test_python_boundaries.py
tests/contract/: README.md  test_m2_schemas.py  test_m3_calendar_schema.py  test_m4_four_pillars_schema.py
tests/e2e/: home.spec.ts
tests/fixtures/m2/: ambiguous-timezone.json  boundary-date.json  evidence-chain.json  invalid-input.json  missing-time.json  normal-input.json
tests/fixtures/m3/: time-normalization-result.json
tests/fixtures/m4/: candidate-golden-four-pillars.json  four-pillars-result.json
