[project]
name = "ai-bazi-api"
version = "0.0.0"
requires-python = "==3.14.6"
dependencies = [
  "ai-bazi-backend",
  "fastapi>=0.116,<1",
  "uvicorn>=0.35,<1",
]

[project.scripts]
ai-bazi-api = "ai_bazi_api.main:run"

[tool.uv.sources]
ai-bazi-backend = { workspace = true }

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

