[project]
name = "ai-bazi-worker"
version = "0.0.0"
requires-python = "==3.14.6"
dependencies = ["ai-bazi-backend"]

[project.scripts]
ai-bazi-worker = "ai_bazi_worker.main:main"

[tool.uv.sources]
ai-bazi-backend = { workspace = true }

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

